# OMS

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  e2ecases.md  pyproject.toml  requirements.txt  run_e2e.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  connector_request.yml  feature_request.yml
.github/workflows/: ci.yml  docker-build.yml  publish.yml  pypi-publish.yml
app/: config.py  main.py
app/core/: security.py
app/database/: __init__.py  elasticsearch_client.py  env_registry.py  mongodb.py  postgres.py  redis_client.py
app/dependencies/: auth.py  brand.py  environment.py  tenant.py
app/middleware/: environment.py  plan_tier.py
app/routers/: admin.py  ai.py  analytics.py  api_keys.py  architect.py  auth.py  brand_access.py  brands.py  connectors.py  customer_profiles.py  customers.py  distribution_groups.py  environments.py  inventory.py  invoices.py  lifecycles.py  monitoring.py  nodes.py  ops.py  orders.py  organizations.py  performance.py  returns.py  search.py  shopify_billing.py  shopify_oauth.py  sourcing_rules.py  testing.py  webhooks.py
app/schemas/: analytics.py  auth.py  b2b.py  brands.py  common.py  connectors.py  customer_profiles.py  inventory.py  invoices.py  lifecycles.py  nodes.py  orders.py  returns.py  search.py  sourcing_rules.py  webhooks.py
app/services/: ai_sourcing.py  api_integration_testing.py  e2e_testing.py  geocoding.py  lifecycle_engine.py  monitoring.py  status_rollup.py  (+4 more)
frontend/: Dockerfile  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vite.config.ts
kuberiva_oms/: cli.py
scripts/: demo_ai_architect.py  demo_seed.py  gen_arch_diagram.py  migrate_shopify_tokens.py  seed.py
tests/: test_imports.py
(+82 files in other folders)
